{
    "name": "InputMaster",
    "maps": [
        {
            "name": "PathfinderTestControls",
            "id": "004a3e80-88d7-4b04-b67c-e383ab24a816",
            "actions": [
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "d5b24880-0281-46aa-8ffb-d6b570df6d79",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightMouseClick",
                    "type": "Button",
                    "id": "7a4a121a-5cf1-4252-b9d0-f513c673660a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftMouseClick",
                    "type": "Button",
                    "id": "8666dbd6-5207-4179-b8c3-984348d3a203",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9a8e11ed-52f1-4ef2-b21b-e063668d4e72",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard + mouse",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79850271-29ef-427f-9dbe-b3da434e3867",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e1fa2f4-9121-4d51-8319-48efc10443cf",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard + mouse",
                    "action": "LeftMouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "keyboard + mouse",
            "bindingGroup": "keyboard + mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}